--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,8 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -17,7 +18,7 @@
         <section class="header-section">
             <div class="conteiner">
                 <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
-                <nav class="conteiner-nav">
+                <nav class="header-niv">
                     <ul class="header-list">
                         <li class="header-list-item"><a class="header-link" href="./index.html">Студія</a></li>
                         <li class="header-list-item"><a class="header-link active-link"
@@ -25,10 +26,10 @@
                         <li class="header-list-item"><a class="header-link" href="./">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="header-list">
-                    <li class="header-list-li"><a class="gmail" href="./">info@devstudio.com</a></li>
-                    <li class="header-list-li">
-                        <a class="phone-number" href="./">+38 096 111 11 11</a>
+                <ul class="header-listik">
+                    <li class="header-listik-ly-item"><a class="gmail" href="/">info@devstudio.com</a></li>
+                    <li class="header-listik-ly-item">
+                        <a class="phone-number" href="/">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
@@ -37,68 +38,68 @@
     <main>
         <section class="all">
             <ul class="portfolios">
-                <li class="portfolios-li">
+                <li class="portfolios-le-item">
                     <a class="active-link" href="./">Усі</a>
                 </li>
-                <li class="portfolios-li">
+                <li class="portfolios-le-item">
                     <a href="./">Веб-сайти</a>
                 </li>
-                <li class="portfolios-li">
+                <li class="portfolios-le-item">
                     <a href="./">Додатки</a>
                 </li>
-                <li class="portfolios-li">
+                <li class="portfolios-le-item">
                     <a href="./">Дизайн</a>
                 </li>
-                <li class="portfolios-li">
+                <li class="portfolios-le-item">
                     <a href="./">Маркетинг</a>
                 </li>
             </ul>
         </section>
         <section class="works">
-            <ul class="works-spisok">
-                <li class="works-spisok-li">
+            <ul class="works-spisok-list">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img.jpg" alt="технокряк">
-                    <h2 class="item-nameofsite">Технокряк</h2>
+                    <h2 class="item-nameofsite-title">Технокряк</h2>
                     <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
-                    <h2 class="item-nameofsite">Постер New Orlean vs Golden Star</h2>
+                    <h2 class="item-nameofsite-title">Постер New Orlean vs Golden Star</h2>
                     <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
-                    <h2 class="item-nameofsite">Ресторан Seafood</h2>
+                    <h2 class="item-nameofsite-title">Ресторан Seafood</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
-                    <h2 class="item-nameofsite">Проєкт Prime</h2>
+                    <h2 class="item-nameofsite-title">Проєкт Prime</h2>
                     <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
-                    <h2 class="item-nameofsite">Проєкт Boxes</h2>
+                    <h2 class="item-nameofsite-title">Проєкт Boxes</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
-                    <h2 class="item-nameofsite">Inspiration has no Borders</h2>
+                    <h2 class="item-nameofsite-title">Inspiration has no Borders</h2>
                     <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
-                    <h2 class="item-nameofsite">Видання Limited Edition</h2>
+                    <h2 class="item-nameofsite-title">Видання Limited Edition</h2>
                     <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
-                    <h2 class="item-nameofsite">Проєкт LAB</h2>
+                    <h2 class="item-nameofsite-title">Проєкт LAB</h2>
                     <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
-                <li class="works-spisok-li">
+                <li class="works-spisok-lie-item">
                     <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
-                    <h2 class="item-nameofsite">Growing Business</h2>
+                    <h2 class="item-nameofsite-title">Growing Business</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
             </ul>
@@ -106,15 +107,15 @@
     </main>
     <footer class="footer">
         <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
-        <ul>
-            <li>
+        <ul class="footer-list">
+            <li class="footer-list-item">
                 <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
             </li>
-            <li>
-                <a class="footer-link" href="./" target="_blank" rel="noreferrer noopener">info@devstudio.com</a>
+            <li class="footer-list-item">
+                <a class="footer-link" href="/">info@devstudio.com</a>
             </li>
-            <li>
-                <a class="phone-number" href="./">+38 096 111 11 11</a>
+            <li class="footer-list-item">
+                <a class="phone-number" href="/">+38 096 111 11 11</a>
             </li>
         </ul>
     </footer>
