--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -19,18 +17,21 @@
     <header class="header">
         <div class="conteiner">
             <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
-            <nav class="header-conteiner-nav">
-                <ul class="header-mainlist">
-                    <li class="header-mainlist-sites"><a class="header-link active-link" href="./index.html">Студія</a>
+            <nav class="header-niv">
+                <ul class="header-mainlist-list">
+                    <li class="header-mainlist-sites-item"><a class="header-link active-link"
+                            href="./index.html">Студія</a>
                     </li>
-                    <li class="header-mainlist-sites"><a class="header-link" href="./portfolio.html">Портфоліо</a></li>
-                    <li class="header-mainlist-sites"><a class="header-link" href="./">Контакти</a></li>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a>
+                    </li>
                 </ul>
             </nav>
-            <ul class="header-list">
-                <li class="header-list-li"><a class="gmail hover" href="./">info@devstudio.com</a></li>
-                <li class="header-list-li">
-                    <a class="phone-number hover" href="./">+38 096 111 11 11</a>
+            <ul class="header-listik-list">
+                <li class="header-listik-ly-item"><a class="gmail" href="/">info@devstudio.com</a></li>
+                <li class="header-listik-ly-item">
+                    <a class="phone-number" href="/">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -39,30 +40,32 @@
         <section class="hero">
             <div class="conteiner">
                 <section class="hero-section">
-                    <h1 class="section-h1">Ефективні рішення для вашого бізнесу</h1>
+                    <h1 class="section-x1">Ефективні рішення для вашого бізнесу</h1>
                     <button class="button" type="button">Замовити послугу</button>
                 </section>
             </div>
         </section>
-        <section class="section-ourwork">
+        <section class="ourwork">
             <div class="conteiner">
-                <ul class="conteiner_ourwork">
-                    <li class="conteiner-ourwork-li">
-                        <h3 class="conteiner-ourwork-atention">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="list-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                <ul class="ourwork-listek-lie-list">
+                    <li class="ourwork-listek-ourwurk-lu-item">
+                        <h3 class="ourwork-atention-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="list-py">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
-                    <li class="conteiner-ourwork-li">
-                        <h3 class="ourwork-atention">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="list-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <li class="ourwork-listek-ourwurk-lu-item">
+                        <h3 class="ourwork-atention-title">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="list-py">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                        </p>
                     </li>
-                    <li class="conteiner-ourwork-li">
-                        <h3 class="ourwork-atention">ПЛАНУВАННЯ</h3>
-                        <p class="list-p">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <li class="ourwork-listek-ourwurk-lu-item">
+                        <h3 class="ourwork-atention-title">ПЛАНУВАННЯ</h3>
+                        <p class="list-py">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="conteiner-ourwork-li">
-                        <h3 class="ourwork-atention">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="list-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <li class="ourwork-listek-ourwurk-lu-item">
+                        <h3 class="ourwork-atention-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="list-py">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -70,42 +73,42 @@
         <section class="images">
             <div class="conteiner">
                 <h3 class="images-ourjob">Чим ми займаємося</h3>
-                <ul class="list">
-                    <li class="item">
-                        <img src="./images/img.jpg" alt="програмування">
+                <ul class="images-ourjob-list">
+                    <li class="images-ourjob-list-item">
+                        <img class="images-ourjob-list-item-img" src="./images/img.jpg" alt="програмування">
                     </li>
-                    <li class="item">
-                        <img src="./images/img-2.jpg" alt="дизайн">
+                    <li class="images-ourjob-list-item">
+                        <img class="images-ourjob-list-item-img" src="./images/img-2.jpg" alt="дизайн">
                     </li>
-                    <li class="item">
-                        <img src="./images/img-3.jpg" alt="оформлення">
+                    <li class="images-ourjob-list-item">
+                        <img class="images-ourjob-list-item-img" src="./images/img-3.jpg" alt="оформлення">
                     </li>
                 </ul>
             </div>
         </section>
         <section class="workers">
             <div class="conteiner">
-                <h2 class="workers-h2">Наша команда</h2>
-                <ul class="list">
-                    <li class="workers-h2-item">
+                <h2 class="workers-x2">Наша команда</h2>
+                <ul class="workers-list">
+                    <li class="workers-x2-item">
                         <img src="./images/img-44.jpg" alt="Ігор">
-                        <p class="workers-p">Ігор Дем'яненко</p>
-                        <h3 class="underworkers">Product Designer</h3>
+                        <p class="workers-pi">Ігор Дем'яненко</p>
+                        <h3 class="underworkers–title">Product Designer</h3>
                     </li>
-                    <li class="workers-h2-item">
+                    <li class="workers-x2-item">
                         <img src="./images/img-41.jpg" alt="Ольга">
-                        <p class="workers-p">Ольга Рєпіна</p>
-                        <h3 class="underworkers">Frontend Developer</h3>
+                        <p class="workers-pi">Ольга Рєпіна</p>
+                        <h3 class="underworkers–title">Frontend Developer</h3>
                     </li>
-                    <li class="workers-h2-item">
+                    <li class="workers-x2-item">
                         <img src="./images/img-22.jpg" alt="Микола">
-                        <p class="workers-p">Микола Тарасов</p>
-                        <h3 class="underworkers">Marketing</h3>
+                        <p class="workers-pi">Микола Тарасов</p>
+                        <h3 class="underworkers–title">Marketing</h3>
                     </li>
-                    <li class="workers-h2-item">
+                    <li class="workers-x2-item">
                         <img src="./images/img-33.jpg" alt="Михайло">
-                        <p class="workers-p">Михайло Єрмаков</p>
-                        <h3 class="underworkers">UI Designer</h3>
+                        <p class="workers-pi">Михайло Єрмаков</p>
+                        <h3 class="underworkers–title">UI Designer</h3>
                     </li>
                 </ul>
             </div>
@@ -115,16 +118,15 @@
         <section class="footer-section">
             <div class="conteiner">
                 <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
-                <ul class="link">
-                    <li class="item">
+                <ul class="footer-list">
+                    <li class="footer-list-item">
                         <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
                     </li>
-                    <li class="item">
-                        <a class="footer-link" href="./" target="_blank"
-                            rel="noreferrer noopener">info@devstudio.com</a>
+                    <li class="footer-list-item">
+                        <a class="footer-link" href="/">info@devstudio.com</a>
                     </li>
-                    <li class="item">
-                        <a class="footer-phone-number" href="./">+38 096 111 11 11</a>
+                    <li class="footer-list-item">
+                        <a class="footer-phone-number" href="/">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
