--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto:wght@400;500;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -28,10 +29,11 @@
                     </li>
                 </ul>
             </nav>
-            <ul class="header-listik-list">
-                <li class="header-listik-ly-item"><a class="gmail" href="/">info@devstudio.com</a></li>
-                <li class="header-listik-ly-item">
-                    <a class="phone-number" href="/">+38 096 111 11 11</a>
+            <ul class="header-second-list">
+                <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
+                        info@devstudio.com</a></li>
+                <li class="header-second-list-item">
+                    <a class="contacts-links" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -47,24 +49,25 @@
         </section>
         <section class="ourwork">
             <div class="conteiner">
-                <ul class="ourwork-listek-lie-list">
-                    <li class="ourwork-listek-ourwurk-lu-item">
+                <ul class="ourwork-list">
+                    <li class="ourwork-list-ourwurk-item">
                         <h3 class="ourwork-atention-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="list-py">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                        <p class="list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                            позиції.
                         </p>
                     </li>
-                    <li class="ourwork-listek-ourwurk-lu-item">
+                    <li class="ourwork-list-ourwurk-item">
                         <h3 class="ourwork-atention-title">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="list-py">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                        <p class="list-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
-                    <li class="ourwork-listek-ourwurk-lu-item">
+                    <li class="ourwork-list-ourwurk-item">
                         <h3 class="ourwork-atention-title">ПЛАНУВАННЯ</h3>
-                        <p class="list-py">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <p class="list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="ourwork-listek-ourwurk-lu-item">
+                    <li class="ourwork-list-ourwurk-item">
                         <h3 class="ourwork-atention-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="list-py">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                        <p class="list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                         </p>
                     </li>
                 </ul>
@@ -88,26 +91,26 @@
         </section>
         <section class="workers">
             <div class="conteiner">
-                <h2 class="workers-x2">Наша команда</h2>
+                <h2 class="workers-title">Наша команда</h2>
                 <ul class="workers-list">
-                    <li class="workers-x2-item">
+                    <li class="workers-title-item">
                         <img src="./images/img-44.jpg" alt="Ігор">
-                        <p class="workers-pi">Ігор Дем'яненко</p>
+                        <p class="workers-text">Ігор Дем'яненко</p>
                         <h3 class="underworkers–title">Product Designer</h3>
                     </li>
-                    <li class="workers-x2-item">
+                    <li class="workers-title-item">
                         <img src="./images/img-41.jpg" alt="Ольга">
-                        <p class="workers-pi">Ольга Рєпіна</p>
+                        <p class="workers-text">Ольга Рєпіна</p>
                         <h3 class="underworkers–title">Frontend Developer</h3>
                     </li>
-                    <li class="workers-x2-item">
+                    <li class="workers-title-item">
                         <img src="./images/img-22.jpg" alt="Микола">
-                        <p class="workers-pi">Микола Тарасов</p>
+                        <p class="workers-text">Микола Тарасов</p>
                         <h3 class="underworkers–title">Marketing</h3>
                     </li>
-                    <li class="workers-x2-item">
+                    <li class="workers-title-item">
                         <img src="./images/img-33.jpg" alt="Михайло">
-                        <p class="workers-pi">Михайло Єрмаков</p>
+                        <p class="workers-text">Михайло Єрмаков</p>
                         <h3 class="underworkers–title">UI Designer</h3>
                     </li>
                 </ul>
