--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -26,10 +27,11 @@
                         <li class="header-list-item"><a class="header-link" href="./">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="header-listik">
-                    <li class="header-listik-ly-item"><a class="gmail" href="/">info@devstudio.com</a></li>
-                    <li class="header-listik-ly-item">
-                        <a class="phone-number" href="/">+38 096 111 11 11</a>
+                <ul class="header-second-list">
+                    <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
+                            info@devstudio.com</a></li>
+                    <li class="header-second-list-item">
+                        <a class="contacts-links" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
@@ -38,66 +40,66 @@
     <main>
         <section class="all">
             <ul class="portfolios">
-                <li class="portfolios-le-item">
-                    <a class="active-link" href="./">Усі</a>
+                <li class="portfolios-sites-item">
+                    <a class="portfolios-sites-item-link active-link" href="./">Усі</a>
                 </li>
-                <li class="portfolios-le-item">
-                    <a href="./">Веб-сайти</a>
+                <li class="portfolios-sites-item">
+                    <a class="portfolios-sites-item-link" href="./">Веб-сайти</a>
                 </li>
-                <li class="portfolios-le-item">
-                    <a href="./">Додатки</a>
+                <li class="portfolios-sites-item">
+                    <a class="portfolios-sites-item-link" href="./">Додатки</a>
                 </li>
-                <li class="portfolios-le-item">
-                    <a href="./">Дизайн</a>
+                <li class="portfolios-sites-item">
+                    <a class="portfolios-sites-item-link" href="./">Дизайн</a>
                 </li>
-                <li class="portfolios-le-item">
-                    <a href="./">Маркетинг</a>
+                <li class="portfolios-sites-item">
+                    <a class="portfolios-sites-item-link" href="./">Маркетинг</a>
                 </li>
             </ul>
         </section>
         <section class="works">
-            <ul class="works-spisok-list">
-                <li class="works-spisok-lie-item">
+            <ul class="works-list">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img.jpg" alt="технокряк">
                     <h2 class="item-nameofsite-title">Технокряк</h2>
                     <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-2.jpg" alt="Постер New Orlean vs Golden Star">
                     <h2 class="item-nameofsite-title">Постер New Orlean vs Golden Star</h2>
                     <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-3.jpg" alt="Ресторан Seafood">
                     <h2 class="item-nameofsite-title">Ресторан Seafood</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-4.jpg" alt="Проєкт Prime">
                     <h2 class="item-nameofsite-title">Проєкт Prime</h2>
                     <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-5.jpg" alt="Проєкт Boxes">
                     <h2 class="item-nameofsite-title">Проєкт Boxes</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-6.jpg" alt="Inspiration has no Borders">
                     <h2 class="item-nameofsite-title">Inspiration has no Borders</h2>
                     <p class="item-nameofsite-portfoli">Веб-сайт</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-7.jpg" alt="Видання Limited Edition">
                     <h2 class="item-nameofsite-title">Видання Limited Edition</h2>
                     <p class="item-nameofsite-portfoli">Дизайн</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-8.jpg" alt="Проєкт LAB">
                     <h2 class="item-nameofsite-title">Проєкт LAB</h2>
                     <p class="item-nameofsite-portfoli">Маркетинг</p>
                 </li>
-                <li class="works-spisok-lie-item">
+                <li class="works-list-item">
                     <img src="./images-portfolio/img-9.jpg" alt="Growing Business">
                     <h2 class="item-nameofsite-title">Growing Business</h2>
                     <p class="item-nameofsite-portfoli">Додаток</p>
