--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <div class="conteiner">
+        <div class="conteiner head">
             <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
             <nav class="header-niv">
                 <ul class="header-mainlist-list">
@@ -50,7 +50,7 @@
             </div>
         </section>
         <section class="ourwork">
-            <div class="conteiner">
+            <div class="conteiner owrwork">
                 <ul class="ourwork-list">
                     <li class="ourwork-list-ourwurk-item">
                         <h3 class="ourwork-atention-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -106,12 +106,12 @@
                         <h3 class="underworkers–title">Frontend Developer</h3>
                     </li>
                     <li class="workers-title-item">
-                        <img src="./images/img-22.jpg" alt="Микола">
+                        <img src="./images/img-33.jpg" alt="Микола">
                         <p class="workers-text">Микола Тарасов</p>
                         <h3 class="underworkers–title">Marketing</h3>
                     </li>
                     <li class="workers-title-item">
-                        <img src="./images/img-33.jpg" alt="Михайло">
+                        <img src="./images/img-22.jpg" alt="Михайло">
                         <p class="workers-text">Михайло Єрмаков</p>
                         <h3 class="underworkers–title">UI Designer</h3>
                     </li>
