--- a/portfolio.html
+++ b/portfolio.html
@@ -18,26 +18,24 @@
 
 <body>
     <header class="header">
-        <section class="header-section">
-            <div class="conteiner">
-                <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
-                <nav class="header-niv">
-                    <ul class="header-list">
-                        <li class="header-list-item"><a class="header-link" href="./index.html">Студія</a></li>
-                        <li class="header-list-item"><a class="header-link active-link"
-                                href="./portfolio.html">Портфоліо</a></li>
-                        <li class="header-list-item"><a class="header-link" href="./">Контакти</a></li>
-                    </ul>
-                </nav>
-                <ul class="header-second-list">
-                    <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
-                            info@devstudio.com</a></li>
-                    <li class="header-second-list-item">
-                        <a class="contacts-links" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
+        <div class="conteiner-head">
+            <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
+            <nav class="header-niv">
+                <ul class="header-mainlist-list">
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./index.html">Студія</a></li>
+                    <li class="header-mainlist-sites-item"><a class="header-link active-link"
+                            href="./portfolio.html">Портфоліо</a></li>
+                    <li class="header-mainlist-sites-item"><a class="header-link" href="./">Контакти</a></li>
                 </ul>
-            </div>
-        </section>
+            </nav>
+            <ul class="header-second-list">
+                <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
+                        info@devstudio.com</a></li>
+                <li class="header-second-list-item">
+                    <a class="contacts-links" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <main>
         <section class="all">
