--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <div class="conteiner head">
+        <div class="conteiner-head">
             <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
             <nav class="header-niv">
                 <ul class="header-mainlist-list">
