--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
     <header class="header">
         <div class="conteiner head">
-            <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
             <nav class="header-niv">
+                <a class="header-logo" href="/">Web<span class="header-logo-black">Studio</span></a>
                 <ul class="header-mainlist-list">
                     <li class="header-mainlist-sites-item"><a class="header-link active-link"
                             href="./index.html">Студія</a>
@@ -42,7 +42,7 @@
     </header>
     <main class="main">
         <section class="hero">
-            <div class="conteiner">
+            <div class="conteiner heromain">
                 <section class="hero-section">
                     <h1 class="section-x1">Ефективні рішення для вашого бізнесу</h1>
                     <button class="button" type="button">Замовити послугу</button>
@@ -76,7 +76,7 @@
             </div>
         </section>
         <section class="images">
-            <div class="conteiner">
+            <div class="conteiner image">
                 <h3 class="images-ourjob">Чим ми займаємося</h3>
                 <ul class="images-ourjob-list">
                     <li class="images-ourjob-list-item">
@@ -120,7 +120,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="conteiner">
+        <div class="conteiner foot">
             <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
             <ul class="footer-list">
                 <li class="footer-list-item">
