--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
                         info@devstudio.com</a></li>
                 <li class="header-second-list-item">
-                    <a class="contacts-links" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contacts-links linke" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -43,10 +43,8 @@
     <main class="main">
         <section class="hero">
             <div class="conteiner heromain">
-                <section class="hero-section">
-                    <h1 class="section-x1">Ефективні рішення для вашого бізнесу</h1>
-                    <button class="button" type="button">Замовити послугу</button>
-                </section>
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <button class="button" type="button">Замовити послугу</button>
             </div>
         </section>
         <section class="ourwork">
@@ -123,7 +121,7 @@
         <div class="conteiner foot">
             <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
             <ul class="footer-list">
-                <li class="footer-list-item">
+                <li class="footer-list-item address">
                     <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
                 </li>
                 <li class="footer-list-item">
