--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ul>
             </nav>
             <ul class="header-second-list">
-                <li class="header-second-list-item"><a class="contacts-links" href="mailto:info@devstudio.com">
+                <li class="header-second-list-item"><a class="contacts-links linke" href="mailto:info@devstudio.com">
                         info@devstudio.com</a></li>
                 <li class="header-second-list-item">
                     <a class="contacts-links linke" href="tel:+380961111111">+38 096 111 11 11</a>
