--- a/index.html
+++ b/index.html
@@ -120,17 +120,19 @@
     <footer class="footer">
         <div class="conteiner foot">
             <a class="header-logo" href="/">Web<span class="footer-logo-white">Studio</span></a>
-            <ul class="footer-list">
-                <li class="footer-list-item address">
-                    <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
-                </li>
-                <li class="footer-list-item">
-                    <a class="footer-link" href="/">info@devstudio.com</a>
-                </li>
-                <li class="footer-list-item">
-                    <a class="footer-phone-number" href="/">+38 096 111 11 11</a>
-                </li>
-            </ul>
+            <address class="address.">
+                <ul class="footer-list">
+                    <li class="footer-list-item address">
+                        <p class="location">м. Київ, пр-т Лесі Українки, 26</p>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-link" href="/">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="footer-phone-number" href="/">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
 
     </footer>
